# Arduino_Linear_Encoder_example

./: .gitignore  readme.md
STM32_NUCLEO_F446RE_APP/: app.c
STM32_NUCLEO_F446RE_APP/Core/Src/: gpio.c
motor_linear_encoder_control/: motor_linear_encoder_control.ino
motor_linear_encoder_control_test/: motor_linear_encoder_control_test.ino
src/arduino_simulator_serial/: package.xml  setup.cfg  setup.py
src/arduino_simulator_serial/arduino_simulator_serial/: arduino_simulator_node.py
src/motor_controller/: package.xml  setup.py
src/motor_controller/motor_controller/: motor_controller_node.py
src/motor_hardware_interface/: CMakeLists.txt  package.xml
src/motor_hardware_interface/config/: controller_config.yaml  motor_hardware_interface.xml
src/motor_hardware_interface/launch/: controller_interface.launch.py  hardware_interface.launch.py
src/motor_hardware_interface/src/: motor_hardware_interface.cpp
src/motor_hardware_interface/src/include/motor_hardware_interface/: motor_hardware_interface.hpp  visibility.h
src/motor_hardware_interface/urdf/: linear_cnc_stage.urdf
